@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-516: out-of-core messages dies for ArrayIndexOutOfBoundsException when 
+  running out-of-core messages in UnsafeByteArrayOutputStream (majakabiljo)
 
   GIRAPH-513: OnDiskPartitionStore should take advantage of multiple disks (claudio)
 
